# niudac

./: CMakeLists.txt
app/: CMakeLists.txt  addsimulationdialog.cpp  addsimulationdialog.h  addsimulationdialog.ui  calculationthread.cpp  calculationthread.h  chartwindow.cpp  chartwindow.h  chartwindow.ui  csvexporter.cpp  csvexporter.h  dialogsimulationinfo.cpp  dialogsimulationinfo.h  dialogsimulationinfo.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
libs/: CMakeLists.txt
libs/Transmission/: CMakeLists.txt  bacchannel.cpp  bacchannel.h  bscchannel.cpp  bscchannel.h  channel.cpp  channel.h  channelcoder.cpp  channelcoder.h  coder.cpp  coder.h  codeword.cpp  codeword.h  crc_8_coder.cpp  crc_8_coder.h  crc_x_coder.cpp  crc_x_coder.h  filehandler.cpp  filehandler.h  gechannel.cpp  gechannel.h  paritycoder.cpp  paritycoder.h  simulation.cpp  simulation.h  simulationdata.cpp  simulationdata.h  swarqtransmission.cpp  swarqtransmission.h  threadmanager.cpp  threadmanager.h  transmission.cpp  transmission.h  transmissionstruct.cpp  transmissionstruct.h
resources/documentation/: możliwości programu.odt
resources/sources/: romeo.txt
